--- a/public/index.html
+++ b/public/index.html
@@ -13,100 +13,100 @@
 <body>
     <header class="head">
         <h1>Welcome to my <span>photo</span> gallery</h1> 
-        <p>This is a small <span>project</span> done while studying at the <a href="https://digitalcareerinstitute.org/" target="_blank">DCI.</a></p>
+        <p>This is a small <span>project</span> done while studying at the <a href="https://digitalcareerinstitute.org/" target="_blank">DCI</a>.</p>
     </header>
     <main class="main">
         <section class="gallery">
             <figure class="gallery01image imageWrapper">
-                <img src="./images/01.jpg" alt="">
+                <img src="./images/01.jpg" alt="A picture of some palmtrees in the evening sky.">
                 <div class="dimOverlay">Thomas Lefebvre<div>            
             </figure>
             <figure class="gallery02image imageWrapper">
-                <img src="./images/02.jpg" alt="">
+                <img src="./images/02.jpg" alt="A picture of Time Sqaure New York at night.">
                 <div class="dimOverlay">Wojtek Witkowski<div>            
             </figure>
             <figure class="gallery03image imageWrapper">
-                <img src="./images/03.jpg" alt="">
+                <img src="./images/03.jpg" alt="A picture of a big mountain with a foggy forest at the base.">
                 <div class="dimOverlay">Dustin Scarpitti<div>            
             </figure>
             <figure class="gallery04image imageWrapper">
-                <img src="./images/04.jpg" alt="">
+                <img src="./images/04.jpg" alt="A picture of some trees taken from inside a room looking out the window.">
                 <div class="dimOverlay">Martin Wessely<div>            
             </figure>
             <figure class="gallery05image imageWrapper">
-                <img src="./images/05.jpg" alt="">
+                <img src="./images/05.jpg" alt="A picture of jetty at sunset.">
                 <div class="dimOverlay">Stefanus M. S. Husodo<div>            
             </figure>
             <figure class="gallery06image imageWrapper">
-                <img src="./images/06.jpg" alt="">
+                <img src="./images/06.jpg" alt="A black and white picture of a tiger lying down in its cage.">
                 <div class="dimOverlay">Paula Borowska<div>            
             </figure>
             <figure class="gallery07image imageWrapper">
-                <img src="./images/07.jpg" alt="">
+                <img src="./images/07.jpg" alt="A black and white picture of some tulips in a forest.">
                 <div class="dimOverlay">Ales Krivec<div>            
             </figure>
             <figure class="gallery08image imageWrapper">
-                <img src="./images/08.jpg" alt="">
+                <img src="./images/08.jpg" alt="A black and white picture of some stary sky with a person in the foreground.">
                 <div class="dimOverlay">Jeremy Thomas<div>            
             </figure>
             <figure class="gallery09image imageWrapper">
-                <img src="./images/09.jpg" alt="">
+                <img src="./images/09.jpg" alt="A black and white picture of New York at night.">
                 <div class="dimOverlay">Oleg Chursin<div>            
             </figure>
             <figure class="gallery10image imageWrapper">
-                <img src="./images/10.jpg" alt="">
+                <img src="./images/10.jpg" alt="A black and white picture of a lap in a room which has some japanese letters on it.">
                 <div class="dimOverlay">mr.lee<div>            
             </figure>
             <figure class="gallery11image imageWrapper">
-                <img src="./images/11.jpg" alt="">
+                <img src="./images/11.jpg" alt="A picture of a mountain range with a lake in front of it.">
                 <div class="dimOverlay">Alberto Restifo<div>            
             </figure>
             <figure class="gallery12image imageWrapper">
-                <img src="./images/12.jpg" alt="">
+                <img src="./images/12.jpg" alt="A picture of the night sky with a person in front.">
                 <div class="dimOverlay">Greg Rakozy<div>            
             </figure>
             <figure class="gallery13image imageWrapper">
-                <img src="./images/13.jpg" alt="">
+                <img src="./images/13.jpg" alt="A black and white picture of three cones on a twig.">
                 <div class="dimOverlay">Sonja Langford<div>            
             </figure>
             <figure class="gallery14image imageWrapper">
-                <img src="./images/14.jpg" alt="">
+                <img src="./images/14.jpg" alt="A black and white picture of the sea breaking on some cliffs.">
                 <div class="dimOverlay">Annie Spratt<div>            
             </figure>
             <figure class="gallery15image imageWrapper">
-                <img src="./images/15.jpg" alt="">
+                <img src="./images/15.jpg" alt="A black and white picture inside of a building showind a glass windowed ceiling.">
                 <div class="dimOverlay">Drew P. Miller<div>            
             </figure>
             <figure class="gallery16image imageWrapper">
-                <img src="./images/16.jpg" alt="">
+                <img src="./images/16.jpg" alt="A picutre of the clouds and the morning sun.">
                 <div class="dimOverlay">Sebastien Gabriel<div>            
             </figure>
             <figure class="gallery17image imageWrapper">
-                <img src="./images/17.jpg" alt="">
+                <img src="./images/17.jpg" alt="A picture of a tree with the nothern lights in the background.">
                 <div class="dimOverlay">Vashishtha Jogi<div>            
             </figure>
             <figure class="gallery18image imageWrapper">
-                <img src="./images/18.jpg" alt="">
-                <div class="dimOverlay">chancema<div>            
+                <img src="./images/18.jpg" alt="A picture of a camera ontop of zip hoodie.">
+                <div class="dimOverlay">chancema<div>    
             </figure>
             <figure class="gallery19image imageWrapper">
-                <img src="./images/19.jpg" alt="">
+                <img src="./images/19.jpg" alt="a Picture of inside some caves with the sun shining in from some open spot at the top.">
                 <div class="dimOverlay">Sebastian Boguszewicz<div>            
             </figure>
             <figure class="gallery20image imageWrapper">
-                <img src="./images/DogRightEye.jpeg" alt="">
+                <img src="./images/DogRightEye.jpeg" alt="A picture of a dogs brown eye.">
                 <div class="dimOverlay">Danny T. H. Wild<div>            
             </figure>
             <figure class="gallery21image imageWrapper">
-                <img src="./images/DogLeftEye.jpeg" alt="">
+                <img src="./images/DogLeftEye.jpeg" alt="A picture of a dogs blue eye.">
                 <div class="dimOverlay">Danny T. H. Wild<div>            
             </figure>    
         </section>         
     </main>
     <footer class="foot">
-        <a href="https://github.com/DTHW" target="_blank">Author</a>
-        <a href="https://supsystic.com/example/blackout-gallery-example/ " target="_blank">Reference</a>
-        <a href="https://picsum.photos/" target="_blank">Image sources</a>
+        <a class="link" href="https://github.com/DTHW" target="_blank">Author</a>
+        <a class="link" href="https://supsystic.com/example/blackout-gallery-example/ " target="_blank">Reference</a>
+        <a class="link" href="https://picsum.photos/" target="_blank">Image sources</a>
         <div class="iconSource">
             <p><a href="https://icons8.com/icon/nevTPff0KmQx/camera" target="_blank">Camera</a> icon by <a href="https://icons8.com" target="_blank">Icons8</a></p>
         </div>
